# heimdall-rs

./: .gitignore  Cargo.toml  README.md
ark-circom-service/: Cargo.toml  build.rs  log.txt
ark-circom-service/benches/: ark-circom-poseidon.rs
ark-circom-service/lib/: poseidon_bench.wasm
ark-circom-service/src/: lib.rs
crypto/: Cargo.toml
crypto/src/: lib.rs  merkle_tree.rs  poseidon.rs
heimdall/: Cargo.toml  build.rs  cred.json  input.json  input_attribute.json  input_delegation.json  input_polygon.json  input_range.json  presentation_attribute.json  presentation_range.json  revocation_registry_test.json  test.json
heimdall/benches/: heimdall-presentations.rs
heimdall/src/: credential.rs  lib.rs  presentation.rs  revocation.rs  zkp.rs
witness-utils/: Cargo.toml  hash_circuites.wtns
witness-utils/src/: lib.rs
witnesscalc/: CMakeLists.txt
witnesscalc/cmake/: platform.cmake
witnesscalc/src/: CMakeLists.txt  poseidon_bench.cpp  setup.sh  witnesscalc_poseidon_bench.cpp  witnesscalc_poseidon_bench.h  witnesscalc_presentation_attribute.cpp  witnesscalc_presentation_attribute.h  witnesscalc_presentation_delegation.cpp  witnesscalc_presentation_delegation.h  witnesscalc_presentation_polygon.cpp  witnesscalc_presentation_polygon.h  witnesscalc_presentation_range.cpp  witnesscalc_presentation_range.h
