[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
num-bigint = { version = "0.4",default-features = false, features = ["serde"]}
poseidon-rs = {git = "https://github.com/arnaucube/poseidon-rs"}
ff = {package="ff_ce" , version="0.11", features = ["derive"]}
babyjubjub-rs = {git = "https://github.com/arnaucube/babyjubjub-rs"}
num-traits = {version = "0.2.15",  default-features = false}

[target.'cfg(target_os="android")'.dependencies]
babyjubjub-rs = {git = "https://github.com/arnaucube/babyjubjub-rs", features = ["aarch64"]}